# nf-mp-builder

./: graph.py  pyproject.toml  styles.tcss
mp_builder/: graph.py  main.py
src/mp_builder/: __init__.py  dialogs.py  graph.py  main.py  node_view.py  ui.py  utils.py
src/mp_builder/config/: __init__.py  config.py  metawf_graph.py  models.py
src/mp_builder/gui/: dialogs.py  edge_view.py  graph.py  node_view.py  ui.py
src/mp_builder/gui/styles/: dialogs.tcss  styles.tcss
styles/: styles.tcss
textual-playground/: gui.py  randomtree.py
